--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.72.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-google-signin": "^2.1.1",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6"
   },
