--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-camera": "~13.4.4",
+    "expo-media-library": "~15.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
