--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-google-signin/google-signin": "^10.1.1",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-camera": "~13.4.4",
     "expo-constants": "^14.4.2",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
     "react": "18.2.0",
@@ -26,9 +29,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-camera": "~13.4.4",
-    "expo-media-library": "~15.4.1"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
