--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
