--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
-    "expo-camera": "~13.4.4",
     "expo-constants": "^14.4.2",
-    "expo-media-library": "~15.4.1",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
     "react": "18.2.0",
@@ -29,8 +28,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6",
-    "expo-image-picker": "~14.3.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
