--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-firebase/app": "^18.6.2",
-    "@react-native-firebase/storage": "^18.6.2",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/storage": "^17.4.2",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~49.0.15",
-    "expo-constants": "^14.4.2",
+    "expo": "^49.0.21",
+    "expo-constants": "~14.4.2",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
@@ -27,6 +27,7 @@
     "react-native": "0.72.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6"
   },
